Fix(UI): Fix time element height on Safari (#3809)
Closes #3739

--- a/ui/less/buttons.less
+++ b/ui/less/buttons.less
@@ -75,10 +75,6 @@
 .shaka-current-time {
   font-size: 14px;
   color: rgb(255, 255, 255);
-
-  /* Make the time element the right size for the text, instead of defaulting
-   * to the same size as the rest of the controls. */
-  height: auto;
   cursor: pointer;
 
   &[disabled] {
